# AnnotationGenerator

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  OutputFormat.md  README.md  build.py  build_clang.sh  build_tools.ini  bumpver.toml  conanfile.py  dependencies.ini  project.yml  test_build.bat  test_regen.bat  upload_travis.sh
.github/workflows/: ci.yml  deploy_conan.yml  test_acceptance.yml
Modules/: Conan.cmake  FindLibClang.cmake
Source/LibClang/: project.yml
Source/Preprocessor/: CMakeLists.txt  Preprocessor.cpp  Preprocessor.h  main.cpp  project.yml
Source/Preprocessor/Core/: Context.cpp  Context.h  Generator.cpp  Generator.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Runtime.cpp  Runtime.h  SourceFile.cpp  SourceFile.h  SourcePattern.cpp  SourcePattern.h  Visitor.cpp  Visitor.h
Source/Preprocessor/Core/Parsing/: CursorHandlerFactory.cpp  CursorHandlerFactory.h  ParseContext.cpp  ParseContext.h  Parser.cpp  Parser.h  Typedefs.h  Visitor.cpp  Visitor.h
Source/Preprocessor/Core/TypeData/: ReflectionInfo.cpp  ReflectionInfo.h  ReflectionUtils.h
Source/Preprocessor/Utils/: Argument.h  ArgumentParser.cpp  ArgumentParser.h  Context.h  Filesystem.cpp  Filesystem.h  Options.cpp  Options.h  Utils.h  Version.h
Source/Reflection/: CMakeLists.txt  project.yml
Source/Reflection/include/: ReflectionInfo.h  ReflectionUtils.h
Source/Reflection/src/: ReflectionInfo.cpp
Source/Test/: inject.h  meta_MyGreatClass.h  reflection_header.mustache  reflection_main.cpp  reflection_main.mustache  reflection_template.json  test.h
config/: dev_profile.yml  plat_windows.yml
configurations/: Asan.yml  Debug.yml  Develop.yml  MsvcRules.yml  Retail.yml  Rules.yml
include/: ReflectionInfo.h
modules/: FindLibClang.cmake
platform/: windows.yml
profiles/: windows_msvc
source/: main.cpp
source/Preprocessor/: Options.h  Preprocessor.cpp  Preprocessor.h
source/Utils/: Argument.cpp  ArgumentParser.cpp  ArgumentParser.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/zetsubou_build_step/: build_tools.ini  generate.yml  project.yml  rtti.yml  target.yml
tests/zetsubou_build_step/config/: agnes_preprocessor.yml  dev_profile.yml  retail.yml
tests/zetsubou_build_step/config/agnes/: reflection_class.mustache  reflection_enum.mustache  reflection_header.mustache  reflection_main.mustache  reflection_template.json  reflection_unit.mustache
tests/zetsubou_build_step/src/: class.h  header.h  main.cpp
tests/zetsubou_build_step/src/app/src/: class.h
tests/zetsubou_build_step/src/generate/: generate.yml
tests/zetsubou_build_step/src/rtti/: rtti.yml
